# claw-code

./: .gitignore  run.sh  update-claw.sh  zai-claw.sh
docs/: README.md  api-routing.md  architecture.md  cli-reference.md  configuration.md  contributing.md  deepseek-setup.md  getting-started.md  plugins.md  sessions.md  tools.md
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  lib.rs  oauth.rs
rust/crates/api/src/providers/: antigravity.rs  antigravity_accounts.rs  mod.rs  openai_compat.rs
rust/crates/commands/src/: lib.rs
rust/crates/runtime/src/: mcp_stdio.rs
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/rusty-claude-cli/tests/: cli_flags_and_config_defaults.rs  resume_slash_commands.rs
